[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/weapon/item_bow.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/PNG/character_handGreen.png" type="Texture" id=2]
[ext_resource path="res://src/Bow.gd" type="Script" id=3]

[node name="Bow" type="Node2D"]
script = ExtResource( 3 )

[node name="Chord" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Chord"]
points = PoolVector2Array( 24, -27, 23, 4, 24, 26 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="Bow" type="Node2D" parent="."]

[node name="BowSprite" type="Sprite" parent="Bow"]
position = Vector2( 30, 0 )
texture = ExtResource( 1 )

[node name="Hand1" type="Node2D" parent="."]

[node name="CharacterHandGreen" type="Sprite" parent="Hand1"]
position = Vector2( 34, 0 )
z_index = 1
texture = ExtResource( 2 )

[node name="Hand2" type="Node2D" parent="."]
position = Vector2( 23, 4 )

[node name="CharacterHandGreen" type="Sprite" parent="Hand2"]
z_index = 1
texture = ExtResource( 2 )

[node name="ShootTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
